docs updated, test coverage increases
